mule-user-guide/v/3.2/adding-message-processors-to-a-flow.adoc
= 将消息处理器添加到流中

此示例显示如何将消息处理组件（在此示例中为Logger和Echo）添加到Flow中。通过这样做，您可以在您的Mule应用程序中执行自定义日志记录。记录功能可用于反思当前消息并为您的特定需求创建日志记录事件。

我们在这里介绍几个新概念：

*  link:https://blogs.mulesoft.com/dev/mule-dev/mule-3-architecture-part-2-introducing-the-message-processor/[消息处理器]  - 消息处理器是Mule中所有元素的基本构建块。这些块可以粘在一起创造骡子流。在这个例子中，我们使用Logger和Echo消息处理器。
*  link:/mule-user-guide/v/3.2/using-expressions[Mule表达式]  -  Mule具有强大的内置表达式语言，用于查询请求和响应有效载荷和标题。我们使用Logger组件的表达式来提取一些信息并记录一些有用的信息。

== 您将学习什么

* 如何构建Mule Studio中的现有Mule Flow
* 如何使用表达式记录请求详细信息

观看视频
视频:: 74cfWpz0fic [YouTube的]

看到这个例子在Mule Studio中构建和运行

5分钟

== 先决条件

这些示例要求您已完成前面的示例 link:/mule-user-guide/v/3.2/configuring-an-endpoint[配置端点]。

== 构建示例

1.我们继续编辑 link:/mule-user-guide/v/3.2/configuring-an-endpoint[前面的例子]，现在将一个记录器组件添加到流中。将记录器组件从调色板拖到画布上，并将其放置在HTTP端点和Echo组件之间。

2.双击记录器组件编辑其属性。

3.在消息字段中输入以下文本："About to echo #[MULE3EXAMPLES:payload]"

`#[MULE3EXAMPLES:payload]`是每次在此流上发出请求时评估的mule表达式。表达式提取请求负载。您可以使用Mule强大的表达式语言在请求或响应头和有效负载上执行XPATH，Groovy和其他代码。

== 运行示例

4.右键单击项目树中的流程，然后选择运行方式...→Mule应用程序。如果它仍然在前面的例子中运行，没有必要停止Mule应用程序。当您在文件菜单中点击保存或按CTRL + S时，您在此处所做的更改将自动为"hot deployed"。

5.接下来，打开浏览器并转至`+http://localhost:8081/echo+`。您应该在浏览器中看到以下内容。

6.现在回到Mule Studio并检查日志。您将看到Logger将请求负载写入控制台窗口。

== 摘要

* 您只是在您的流程中添加了Logger消息处理器，它演示了如何在Flow中对不同的处理器进行排序。
* 您使用`#[MULE3EXAMPLES:payload]`表达式来记录请求的有效负载。表达式针对在运行时收到的每条消息进行评估。

== 参考

*  link:/mule-user-guide/v/3.2/logger-element-for-flows[记录仪]
*  link:https://blogs.mulesoft.com/dev/mule-dev/mule-3-architecture-part-2-introducing-the-message-processor/[消息处理器]
*  link:/mule-user-guide/v/3.2/using-expressions[Mule表达式]


'''''
