mule-user-guide/v/3.3/adding-message-processors-to-a-flow.adoc
= 将消息处理器添加到流中

此示例显示如何将消息处理组件（在此示例中为Logger和Echo）添加到Flow中。通过这样做，您可以在您的Mule应用程序中执行自定义日志记录。记录功能可用于反思当前消息并为您的特定需求创建日志记录事件。

我们在这里介绍几个新概念：

*  link:https://blogs.mulesoft.com/dev/mule-dev/mule-3-architecture-part-2-introducing-the-message-processor/[消息处理器]  - 消息处理器是Mule中所有元素的基本构建块。这些块可以粘在一起创造骡子流。在这个例子中，我们使用Logger和Echo消息处理器。
*  link:/mule-user-guide/v/3.3/mule-expression-language-mel[骡子表达语言]  -  Mule具有强大的内置表达式语言，用于查询请求和响应有效载荷和标题。我们使用Logger组件的表达式来提取一些信息并记录一些有用的信息。

== 您将学习什么

* 如何构建Mule Studio中的现有Mule Flow
* 如何使用表达式记录请求详细信息
+
[cols="40a,20a",width=60%]
|===
|
视频:: 74cfWpz0fic [YouTube的]  | *Watch a video*
|===

== 立即构建它！ _（5分钟）_

=== 先决条件

这些示例要求您已完成前面的示例 link:/mule-user-guide/v/3.3/configuring-an-endpoint[配置端点]。

=== 构建示例

. 我们继续编辑 link:/mule-user-guide/v/3.3/configuring-an-endpoint[前面的例子]，现在将一个记录器组件添加到流程中。将记录器组件从调色板拖到画布上，并将其放置在HTTP端点和Echo组件之间：
+
image:studioAddLogger.png[studioAddLogger]

. 双击记录器组件编辑其属性。

. 在消息字段中输入以下文本："About to echo #[payload]"
+
image:studioConfigureLogger.png[studioConfigureLogger]

`#[payload]`是每次在此流上发出请求时评估的mule表达式。表达式提取请求负载。您可以使用Mule强大的表达式语言在请求或响应头和有效负载上执行XPATH，Groovy和其他代码。

=== 运行示例

[start="4"]
. 右键单击项目树中的流程并选择Run As ...→Mule Application
+
[TIP]
====
*Hot Deployment*

如果它仍然在前面的例子中运行，没有必要停止Mule应用程序。当您在文件菜单中点击保存或按CTRL + S时，您在此处所做的更改将自动为"hot deployed"。
====
+
image:studioRunMuleFlow.png[studioRunMuleFlow]

. 接下来，打开浏览器并转至http：// localhost：8081 / echo。您应该在浏览器中看到以下内容：
+
image:studioEchoFlowWebOutput.png[studioEchoFlowWebOutput]

. 现在回到Mule Studio并检查日志。您将看到Logger将请求负载写入控制台窗口。
+
image:studioLoggerConsoleOutput.png[studioLoggerConsoleOutput]

==== 发生了什么？

* 您只是在您的流程中添加了Logger消息处理器，它演示了如何在Flow中对不同的处理器进行排序。
* 您使用`#[payload]`表达式来记录请求的有效负载。表达式针对在运行时收到的每条消息进行评估。

== 参考

*  link:/mule-user-guide/v/3.3/logger-component-reference[记录仪]
*  link:https://blogs.mulesoft.com/dev/mule-dev/mule-3-architecture-part-2-introducing-the-message-processor/[消息处理器]
*  link:/mule-user-guide/v/3.3/mule-expression-language-mel[Mule表达语言MEL]

== 下一步

下一步： link:/mule-user-guide/v/3.3/understanding-the-mule-message[理解骡子消息]

上一个： link:/mule-user-guide/v/3.3/adding-message-processors-to-a-flow[将消息处理器添加到流]
